--- a/ForEvents/app/src/main/res/layout/profile_events_item.xml
+++ b/ForEvents/app/src/main/res/layout/profile_events_item.xml
@@ -17,7 +17,7 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/post_image_event"/>
 
             <TextView
